refactor(code-quality): add radix to parseInt and use List.of
- Add radix parameter (10) to all JavaScript parseInt calls
  - transactions/form.html: 2 fixes
  - alpine-components.js: 4 fixes
- DocumentStorageService: Arrays.asList → List.of for immutable list

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>